// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Builtin resources, STDIO should read the patternfly-docs-meta: meta output 1`] = `
{
  "mimeType": "text/markdown",
  "text": "# PatternFly Documentation Index Metadata
Use these parameters to filter the PatternFly documentation index.

## Available Parameters

| Parameter | Valid Values | Description |
| :--- | :--- | :--- |
| \`category\` | \`accessibility\`, \`design-guidelines\`, \`design-tokens\`, \`development-guidelines\`, \`grammar\`, \`react\`, \`writing-guides\` | Filter by category |
| \`section\` | \`ai\`, \`charts\`, \`components\`, \`content-design\`, \`extensions\`, \`foundations-and-styles\`, \`get-started\`, \`guidelines\`, \`layouts\`, \`patterns\`, \`resources\`, \`upgrade\` | Filter by section |
| \`version\` | \`v4\`, \`v5\`, \`v6\` | Filter by version |

## Available Patterns
- **Base View**: \`patternfly://docs/index\`
- **Filtered View (version=...)**: \`patternfly://docs/index?version=...\`
- **Filtered View (category=...)**: \`patternfly://docs/index?category=...\`
- **Filtered View (version=...&category=...)**: \`patternfly://docs/index?version=...&category=...\`
- **Filtered View (section=...)**: \`patternfly://docs/index?section=...\`
- **Filtered View (version=...&section=...)**: \`patternfly://docs/index?version=...&section=...\`
- **Filtered View (category=...&section=...)**: \`patternfly://docs/index?category=...&section=...\`
- **Filtered View (version=...&category=...&section=...)**: \`patternfly://docs/index?version=...&category=...&section=...\`",
  "uri": "patternfly://docs/meta",
}
`;

exports[`Builtin tools, STDIO should concatenate headers and separator with two remote files 1`] = `
"# Content for http://127.0.0.1:5010/notARealPath/AboutModal.md
Source: http://127.0.0.1:5010/notARealPath/AboutModal.md

# Test Document

This is a test document for mocking remote HTTP requests.

---

# Content for http://127.0.0.1:5010/notARealPath/README.md
Source: http://127.0.0.1:5010/notARealPath/README.md

# PatternFly Development Rules
            This is a generated offline fixture used by the MCP external URLs test.

            Essential rules and guidelines working with PatternFly applications.

            ## Quick Navigation

            ### 🚀 Setup & Environment
            - **Setup Rules** - Project initialization requirements
            - **Quick Start** - Essential setup steps
            - **Environment Rules** - Development configuration"
`;

exports[`Builtin tools, STDIO should expose expected tools and stable shape 1`] = `
{
  "toolNames": [
    "componentSchemas",
    "searchPatternFlyDocs",
    "usePatternFlyDocs",
  ],
}
`;

exports[`Logging should allow setting logging options, default 1`] = `[]`;

exports[`Logging should allow setting logging options, stderr 1`] = `
[
  "[INFO]: Server logging enabled.
",
  "[INFO]: Server stats enabled.
",
  "[INFO]: No external resources loaded.
",
  "[INFO]: No external tools loaded.
",
  "[INFO]: Registered resource: patternfly-context
",
  "[INFO]: Registered resource: patternfly-components-index-meta
",
  "[INFO]: Registered resource: patternfly-components-index
",
  "[INFO]: Registered resource: patternfly-docs-index-meta
",
  "[INFO]: Registered resource: patternfly-docs-index
",
  "[INFO]: Registered resource: patternfly-docs-template
",
  "[INFO]: Registered resource: patternfly-schemas-index-meta
",
  "[INFO]: Registered resource: patternfly-schemas-index
",
  "[INFO]: Registered resource: patternfly-schemas-template
",
  "[INFO]: Registered tool: usePatternFlyDocs
",
  "[INFO]: Registered tool: searchPatternFlyDocs
",
  "[INFO]: Registered tool: componentSchemas
",
  "[INFO]: @patternfly/patternfly-mcp server running on stdio transport
",
]
`;

exports[`Logging should allow setting logging options, with log level filtering 1`] = `[]`;

exports[`Logging should allow setting logging options, with mcp protocol 1`] = `
[
  {
    "method": "notifications/message",
    "params": {
      "data": "@patternfly/patternfly-mcp server running on stdio transport",
      "level": "info",
      "logger": "@patternfly/patternfly-mcp",
    },
  },
]
`;

exports[`Tools should interact with a tool, echo basic tool 1`] = `
{
  "args": {
    "dolor": "sit amet",
    "lorem": "ipsum",
    "type": "echo",
  },
  "content": [
    {
      "text": "{"type":"echo","lorem":"ipsum","dolor":"sit amet"}",
      "type": "text",
    },
  ],
  "options": [
    "serverName",
    "serverVersion",
    "nodeMajor",
    "repoName",
  ],
}
`;

exports[`Tools should interact with a tool, echo create MCP tool 1`] = `
{
  "args": {
    "dolor": "sit amet",
    "lorem": "ipsum",
    "type": "echo",
  },
  "content": [
    {
      "text": "{"type":"echo","lorem":"ipsum","dolor":"sit amet"}",
      "type": "text",
    },
  ],
}
`;
